# sakila_lab_lilit_ajoyan

./: .gitignore  README.md  dockerfile  load_sakila_sqlite_duckdb.py  netlify.toml  package-lock.json  pyproject.toml  sakila_lab_analysis.ipynb  vercel.json
dashboard/: .gitignore  EVIDENCE_TEMPLATE_README.md  evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: Category.md  actor .md  actor.md  category.md  customer.md  index .md  index.md  revenue.md
dashboard/sources/Sakila/: actor.sql  category.sql  category_film.sql  connection.yaml  customer.sql  month_revenue.sql
